# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import classesRouter from "./classes";
 import sectionsRouter from "./sections";
 import subjectsRouter from "./subjects";
 import attendanceRouter from "./attendance";
+import studentAttendanceRouter from "./studentAttendance";
 import examsRouter from "./exams";
 import examResultsRouter from "./examResults";
 import markSubmissionsRouter from "./markSubmissions";
@@ -32,6 +33,7 @@ router.use(classesRouter);
 router.use(sectionsRouter);
 router.use(subjectsRouter);
 router.use(attendanceRouter);
+router.use(studentAttendanceRouter);
 router.use(examsRouter);
 router.use(examResultsRouter);
 router.use(markSubmissionsRouter);
